# learnrust

./: Cargo.toml
challenge/: Cargo.toml
challenge/src/: main.rs
challenge1/src/: lib.rs
challenge2/: Cargo.toml
challenge2/src/: lib.rs
challenge3/: Cargo.toml
challenge3/src/: lib.rs
challenge4/: Cargo.toml
challenge4/src/: lib.rs
challenge5/: Cargo.toml  rs
challenge5/src/: lib.rs  main.rs.bak
challenge6/: Cargo.toml
challenge6/src/: lib.rs
challenge7/: Cargo.toml
challenge7/src/: lib.rs
challenge8/: Cargo.toml
challenge8/src/: lib.rs
ownership/src/: main.rs
